<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_categories">Categories</string>
    <string name="bottom_nav_cart">Cart</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="bottom_nav_second_module">Second Module</string>
    <string name="search">Search</string>
    <string name="offers">Offers</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="recently_added_products">Recently Added Products</string>
    <string name="announcements">Announcements</string>
    <string name="exclusive_deals">Exclusive Deals</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="products">Products</string>
    <string name="show_otp">Show OTP</string>
</resources>